login + form agregar pelicula

--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -75,6 +75,6 @@
     <script>
         AOS.init();
     </script>
-   <script src="../js/valida_simple_registrarse.js"></script>
+   <script src="../js/valida_registrarse.js"></script>
 </body>
 </html>
