--- a/index.html
+++ b/index.html
@@ -60,14 +60,13 @@
                 <li class="listaItem"><a class="linkNav" href="">Términos y condiciones</a></li>
                 <li class="listaItem"><a class="linkNav" href="">Preguntas frecuentes</a></li>
                 <li class="listaItem"><a class="linkNav" href="">Ayuda</a></li>
-                <li class="listaItem"><a class="linkNav administradorPeliculas" href="">Administrador Peliculas</a></li>
+                <li class="listaItem"><a class="linkNav administradorPeliculas" href="/pages/inicioAdmin.php">Administrador Peliculas</a></li>
             </ul>
         </nav>
         <a href="#main" class="flechaArriba">
             <img src="./assets/img/flecha-hacia-arriba.png" alt="ir arriba flecha">
         </a>
-        <p class="aportes">Aporte realizado por coordinación JAVA-PHP Colaborador <a href="https://www.linkedin.com/in/gisele-milagros-gonzalez" target="_blank">Gisele M. Gonzalez</a></p>
-        <p class="video">Proyecto paso a paso <a href="https://youtu.be/1PgXE1c5jOM" target="_blank">Video Youtube</a></p>
+       
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
