--- a/pages/iniciosesion.html
+++ b/pages/iniciosesion.html
@@ -43,6 +43,6 @@
     <script>
         AOS.init();
     </script>
-    <script src="../js/valida_simple_inicio.js"></script>
+    <script src="../js/valida_iniciosesion.js"></script>
 </body>
 </html>
