se agrega validar_pelicula.js

--- a/pages/peliculaEditada.html
+++ b/pages/peliculaEditada.html
@@ -23,7 +23,7 @@
         <section data-aos="zoom-in" data-aos-duration="1000" class="seccionAdministrador">
 
            
-            <form action="http://localhost:8001/index.php" method="POST" id="form-registro" enctype="multipart/form-data">
+            <form action="http://localhost:8001/index.php" method="PUT" id="form-editar-peli" enctype="multipart/form-data">
             <input type="hidden" name="_method" value="PUT">
 
                 <h2 class="tituloAdministrador">Editar película</h2>
