--- a/pages/listados.html
+++ b/pages/listados.html
@@ -28,11 +28,13 @@
         <div class="row mb-3">
         </div>
         <div class="row  mb-3 text-center">
-            <div class="col-3 fw-bold"></div>
+            <div class="col-3 fw-bold">
+                <button type="submit" class="btn btn-warning btn-sm"><a class="btn btn-warning" href="/" >Salir</a></button>
+            </div>
             <div class="col-3 fw-bold"><h2>Películas</h2></div>
             <div class="col-3 fw-bold"></div>
             <div class="col-3 text-end">
-                <button  type="submit" class="btn btn-success btn-sm"  ><a   class="btn btn-success " href="/pages/adminpeliculas.php" >Agregar pelicula</a></button>
+                <button type="submit" class="btn btn-success btn-sm"><a class="btn btn-success" href="/pages/adminpeliculas.php" >Agregar pelicula</a></button>
             </div>
         </div>
 
