--- a/pages/peliculaEditada.html
+++ b/pages/peliculaEditada.html
@@ -23,7 +23,7 @@
         <section data-aos="zoom-in" data-aos-duration="1000" class="seccionAdministrador">
 
            
-            <form action="http://localhost:8001/index.php" method="PUT" id="form-editar-peli" enctype="multipart/form-data">
+            <form action="http://localhost:8001/index.php" method="POST" id="form-editar-peli" enctype="multipart/form-data">
             <input type="hidden" name="_method" value="PUT">
 
                 <h2 class="tituloAdministrador">Editar película</h2>
@@ -71,7 +71,7 @@
                 <div>
                     <label for="img_url">Elige una imagen JPG:</label>
                     <input type="text" id="img_url" name="img_url" value="">
-                    <input type="file" name="img_url" id="file" accept=".jpg, .jpeg">
+                    <input type="file" name="img_url" id="img_url" accept=".jpg, .jpeg">
                 </div>
                 
                 <div class="comandos">
