--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
         </section>
         <section data-aos="fade-up" data-aos-offset="300" data-aos-delay="50" data-aos-duration="1000" class="buscadorPrincipal">
             <h2 class="tituloSection">¿Qué estas buscando para ver?</h2>
-            <form class="buscadorPeliculas">
+
+            <!--   buscador de peliculas por titulo y descripcion -->
+            <form class="buscadorPeliculas" action="http://localhost:8001/index.php" id="buscar">
                 <input class="inputBuscador" type="text" placeholder="Buscar..." id="buscar" name="buscar">
                 <input class="botonBuscador" type="submit" value="Buscar">
             </form>
+
         </section>
         <hr>
         <section id="tendencias" data-aos="fade-up" data-aos-offset="400" data-aos-delay="100" data-aos-duration="1000" class="peliculasTendencia">
