--- a/pages/listados.html
+++ b/pages/listados.html
@@ -51,6 +51,6 @@
 
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/cargar_pelis_listado.js"></script>
+    <script   type="module"  src="/js/cargar_pelis_listado.js"></script>
 </body>
 </html>
