--- a/pages/listados.html
+++ b/pages/listados.html
@@ -34,7 +34,7 @@
             <div class="col-3 fw-bold"><h2>Películas</h2></div>
             <div class="col-3 fw-bold"></div>
             <div class="col-3 text-end">
-                <button type="submit" class="btn btn-success btn-sm"><a class="btn btn-success" href="/pages/adminpeliculas.php" >Agregar pelicula</a></button>
+                <button type="submit" class="btn btn-success btn-sm"><a class="btn btn-success" href="/pages/adminpeliculas.html" >Agregar pelicula</a></button>
             </div>
         </div>
 
@@ -52,5 +52,6 @@
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script   type="module"  src="/js/cargar_pelis_listado.js"></script>
+    
 </body>
 </html>
