--- a/pages/inicioAdmin.html
+++ b/pages/inicioAdmin.html
@@ -20,7 +20,7 @@
     <main id="main" class="main">
         <section data-aos="zoom-in" data-aos-duration="1000" class="seccionRegistrarse">
             <!--pongo get ya que en github pages da error el method post-->
-            <form id="form-admin" action="listados.html">
+            <form id="form-admin">
                 <h2 class="tituloRegistrarse">Administrador</h2>
                 
                 <div>
@@ -36,9 +36,9 @@
         </section>
     </main>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <script src="../js/valida_inicioadmin.js"></script>
+    <script> AOS.init();</script>
+    <script    type="module" src="../js/login_admin.js" ></script>
+        
+   
 </body>
 </html>
