se agrega foto al listado

--- a/pages/listados.html
+++ b/pages/listados.html
@@ -34,12 +34,12 @@
             <div class="col-3 fw-bold"><h2>Películas</h2></div>
             <div class="col-3 fw-bold"></div>
             <div class="col-3 text-end">
-                <button type="submit" class="btn btn-success btn-sm"><a class="btn btn-success" href="/pages/adminpeliculas.html" >Agregar pelicula</a></button>
+                <button type="submit" class="btn btn-success btn-sm agregar"><a class="btn btn-success agregar" href="/pages/adminpeliculas.html" >Agregar pelicula</a></button>
             </div>
         </div>
 
         <div class="row border-bottom mb-3 text-center">
-            <div class="col-3 fw-bold">Id</div>
+            <div class="col-3 fw-bold">Póster</div>
             <div class="col-3 fw-bold">Título</div>
             <div class="col-3 fw-bold">Duración (minutos)</div>
             <div class="col-3 fw-bold text-end">Acciones</div>
