corrije link varios

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <nav class="navegacion">
-            <a class="anclaLogo" href="#">
+            <a class="anclaLogo" href="/">
                 <i class="fas fa-film" aria-hidden="true"></i>
                 <span>CAC-Movies</span>
             </a>
