--- a/pages/listados.html
+++ b/pages/listados.html
@@ -16,7 +16,7 @@
 
     <header class="header">
         <nav class="navegacion">
-            <a class="anclaLogo" href="/index.html">
+            <a class="anclaLogo" href="../index.html">
                 <i class="fas fa-film" aria-hidden="true"></i>
                 <span>CAC-Movies</span>
             </a>
