--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li class="listaItem"><a class="linkNav" href="">Términos y condiciones</a></li>
                 <li class="listaItem"><a class="linkNav" href="">Preguntas frecuentes</a></li>
                 <li class="listaItem"><a class="linkNav" href="">Ayuda</a></li>
-                <li class="listaItem"><a class="linkNav administradorPeliculas" href="/pages/inicioAdmin.html">Administrador Peliculas</a></li>
+                <li class="listaItem"><a class="linkNav administradorPeliculas" href="pages/inicioAdmin.html">Administrador Peliculas</a></li>
             </ul>
         </nav>
         <a href="#main" class="flechaArriba">
@@ -78,7 +78,7 @@
         AOS.init();
     </script>
     <!--script que trae peliculas de un servidor de tercero y crea cada pelicula en el dom-->
-    <script  type="module" src="./js/cargar_peliculas_index.js"></script>
+    <script  type="module" src="./js/cargar_peliculas_index.js"></script> 
     <script  type="module" src="./js/cargar_server.js"></script>
     <script  type="module" src="./js/buscar_peliculas.js"></script>
 </body>
