--- a/pages/listados.html
+++ b/pages/listados.html
@@ -29,12 +29,12 @@
         </div>
         <div class="row  mb-3 text-center">
             <div class="col-3 fw-bold">
-                <button type="submit" class="btn btn-warning btn-sm"><a class="btn btn-warning" href="/" >Salir</a></button>
+                <button type="submit" class="btn btn-warning btn-sm"><a class="btn btn-warning" href="../index" >Salir</a></button>
             </div>
             <div class="col-3 fw-bold"><h2>Películas</h2></div>
             <div class="col-3 fw-bold"></div>
             <div class="col-3 text-end">
-                <button type="submit" class="btn btn-success btn-sm agregar"><a class="btn btn-success agregar" href="/pages/adminpeliculas.html" >Agregar pelicula</a></button>
+                <button type="submit" class="btn btn-success btn-sm agregar"><a class="btn btn-success agregar" href="/adminpeliculas.html" >Agregar pelicula</a></button>
             </div>
         </div>
 
