--- a/pages/listados.html
+++ b/pages/listados.html
@@ -34,7 +34,7 @@
             <div class="col-3 fw-bold"><h2>Películas</h2></div>
             <div class="col-3 fw-bold"></div>
             <div class="col-3 text-end">
-                <button type="submit" class="btn btn-success btn-sm agregar"><a class="btn btn-success agregar" href="/adminpeliculas.html" >Agregar pelicula</a></button>
+                <button type="submit" class="btn btn-success btn-sm agregar"><a class="btn btn-success agregar" href="./adminpeliculas.html" >Agregar pelicula</a></button>
             </div>
         </div>
 
