--- a/pages/adminpeliculas.html
+++ b/pages/adminpeliculas.html
@@ -76,7 +76,7 @@
                     </div>
                     <div>
                         <button class="boton btn-volver" type="button">
-                            <a class="volver" href="./pages/listados.html">Volver</a>
+                            <a class="volver" href="./listados.html">Volver</a>
                         </button>
                     </div>
                 </div>
