--- a/pages/iniciosesion.html
+++ b/pages/iniciosesion.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bodyRegistrarse">
     <header class="headerRegistrarse">
-        <a class="anclaLogo" href="../index.php">
+        <a class="anclaLogo" href="../index.html">
             <i class="fas fa-film" aria-hidden="true"></i>
             <span>CAC-Movies</span>
         </a>
