--- a/pages/peliculaEditada.html
+++ b/pages/peliculaEditada.html
@@ -14,7 +14,7 @@
 </head>
 <body class="bodyRegistrarse">
     <header class="headerRegistrarse">
-        <a class="anclaLogo" href="../index.php">
+        <a class="anclaLogo" href="../index.html">
             <i class="fas fa-film" aria-hidden="true"></i>
             <span>CAC-Movies</span>
         </a>
@@ -83,7 +83,7 @@
                         <input class="btn-guardar boton" type="submit" value="Guardar">
                     </div> 
                     <div>                                                     
-                        <button class="boton btn-volver" type=""  ><a class="volver" href="/pages/listados.html">Volver</a></button> 
+                        <button class="boton btn-volver" type=""  ><a class="volver" href="./listados.html">Volver</a></button> 
                     </div>
                 </div>
             </form>
