--- a/pages/peliculaEditada.html
+++ b/pages/peliculaEditada.html
@@ -95,7 +95,7 @@
     <script type="module">
         AOS.init();
 
-        import { API_SERVER } from "./js/constantes.js";    
+        import { API_SERVER } from "../js/constantes.js";    
          //Función para cargar los datos de la película en el formulario
         async function cargarDatosPelicula() {
             try {
